<resources>
    <string name="app_name" translatable="false">Ethics Fieldforce</string>
    <string name="google_key" translatable="false">AIzaSyCN6x6R3PNj63Eh0YmnnrYwwu-3K4kzEOY</string>
    <string name="default_notification_channel_id" translatable="false">ethicsfieldforcechannel</string>
    <string name="default_notification_channel_name" translatable="false">ethicsfieldforce</string>
    <string name="str_ok" translatable="false">Ok</string>
    <string name="str_cancel" translatable="false">Cancel</string>
    <string name="bad_connection" translatable="false">Bad Network Connection, Please Wait…</string>
    <string name="error_message" translatable="false">Something went wrong! Try Again</string>
    <string name="no_internet" translatable="false">No Internet Connection</string>
    <string name="enter_registered_number" translatable="false">Enter Registered Number</string>
    <string name="password" translatable="false">Password</string>
    <string name="login" translatable="false">Login</string>
    <string name="powered_by" translatable="false">Powered by</string>
    <string name="ethics_techno_solutions" translatable="false">Ethics Techno Solutions</string>
    <string name="submit" translatable="false">Submit</string>
    <string name="first_name" translatable="false">First Name</string>
    <string name="middle_name" translatable="false">Middle Name</string>
    <string name="last_name" translatable="false">Last Name</string>
    <string name="address" translatable="false">Address</string>
    <string name="state" translatable="false">State</string>
    <string name="zone_region" translatable="false">Zone/Region</string>
    <string name="pincode" translatable="false">Pincode</string>
    <string name="personal_email" translatable="false">Personal Email</string>
    <string name="personal_mobile_no" translatable="false">Personal Mobile No</string>
    <string name="change" translatable="false">Change</string>
    <string name="old_password" translatable="false">Old Password</string>
    <string name="new_password" translatable="false">New Password</string>
    <string name="confirm_new_password" translatable="false">Confirm New Password</string>
    <string name="change_password" translatable="false">Change Password</string>
    <string name="punch_in" translatable="false">Punch In</string>
    <string name="punch_out" translatable="false">Punch Out</string>
    <string name="date" translatable="false">Date</string>
    <string name="in_time" translatable="false">In Time</string>
    <string name="out_time" translatable="false">Out Time</string>
    <string name="type" translatable="false">Type</string>
    <string name="place" translatable="false">Place</string>
    <string name="select_control" translatable="false">Select Control</string>
    <string name="control_mode" translatable="false">Control Mode</string>
    <string name="select_expence_type" translatable="false">Select Expence Type</string>
    <string name="expense_type" translatable="false">Expense Type</string>
    <string name="select_place" translatable="false">Select Place</string>
    <string name="vehical_type" translatable="false">Vehical Type</string>
    <string name="select_vehical" translatable="false">Select Vehical</string>
    <string name="expense_amount" translatable="false">Expense Amount</string>
    <string name="eligible_amount" translatable="false">Eligible Amount</string>
    <string name="remark" translatable="false">Remark</string>
    <string name="select_file" translatable="false">Select File</string>
    <string name="select_category" translatable="false">Select Category</string>
    <string name="category" translatable="false">Category</string>
    <string name="party_account_name" translatable="false">Party Account Name</string>
    <string name="city" translatable="false">City</string>
    <string name="phone" translatable="false">Phone</string>
    <string name="email" translatable="false">Email</string>
    <string name="contact_person_phone" translatable="false">Contact Person Phone</string>
    <string name="contact_person_email" translatable="false">Contact Person Email</string>
    <string name="account_handle_by" translatable="false">Account Handle By</string>
    <string name="live_location" translatable="false">Live Location</string>
    <string name="report_to" translatable="false">Report To</string>
    <string name="select_leave_type" translatable="false">Select Leave Type</string>
    <string name="leave_type" translatable="false">Leave Type</string>
    <string name="from_date" translatable="false">From Date</string>
    <string name="to_date" translatable="false">To Date</string>
    <string name="reason" translatable="false">Reason</string>
    <string name="half_day_leave" translatable="false">Half Day Leave</string>
    <string name="map" translatable="false">Map</string>
    <string name="something_went_wrong" translatable="false">Something went wrong</string>
    <string name="username_validation" translatable="false">Please enter registered number</string>
    <string name="password_validation" translatable="false">Please enter password</string>
    <string name="str_invalid_login" translatable="false">Invalid Login Credentials</string>
    <string name="str_device_not_valid" translatable="false">Device not Valid</string>
    <string name="account_details" translatable="false">Account Details</string>
    <string name="about_us" translatable="false">About Us</string>
    <string name="terms_condition" translatable="false"><![CDATA[Terms & Condition]]></string>
    <string name="privacy_policy" translatable="false">Privacy Policy</string>
    <string name="support" translatable="false">Support</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="attendance" translatable="false">Attendance</string>
    <string name="trip" translatable="false">Trip</string>
    <string name="home" translatable="false">Home</string>
    <string name="reports" translatable="false">Reports</string>
    <string name="more_options" translatable="false">More Options</string>
    <string name="approval_list" translatable="false">Approval List</string>
    <string name="str_location_fetch" translatable="false">Please wait, We are fetching current location</string>
    <string name="str_punch_in_msg" translatable="false">Punch In Successfully</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="error" translatable="false">Error</string>
    <string name="trip_report" translatable="false">Trip Report</string>
    <string name="attendance_report" translatable="false">Attendance Report</string>
    <string name="trip_summery_report" translatable="false">Trip Summery Report</string>
    <string name="date_option" translatable="false">Date Option</string>
    <string name="date_range" translatable="false">Date Range</string>
    <string name="network_error" translatable="false">Network Error</string>
    <string name="network_error_msg" translatable="false">No Internet Connection.</string>
    <string name="filter" translatable="false">Filter</string>
    <string name="start_date" translatable="false">Start Date</string>
    <string name="end_date" translatable="false">End Date</string>
    <string name="user_list" translatable="false">User List</string>
    <string name="vehicle" translatable="false">Vehicle</string>
    <string name="trip_date" translatable="false">Trip Date</string>
    <string name="start_time" translatable="false">Start Time</string>
    <string name="end_time" translatable="false">End Time</string>
    <string name="visit_count" translatable="false">Visit Count</string>
    <string name="reading_km" translatable="false">Reading KM</string>
    <string name="map_km" translatable="false">Map KM</string>
    <string name="actual_km" translatable="false">Actual \n KM</string>
    <string name="map_view" translatable="false">Map View</string>
    <string name="map_error" translatable="false">MAP ERROR</string>
    <string name="expense_list" translatable="false">Expense List</string>
    <string name="status" translatable="false">Status</string>
    <string name="limit" translatable="false">Limit</string>
    <string name="expense" translatable="false">Expense</string>
    <string name="more_expense_entry" translatable="false">Expense &#10; Entry</string>
    <string name="more_expense_approval" translatable="false">Expense</string>
    <string name="more_party_dealer" translatable="false">Party/Dealer</string>
    <string name="more_visit" translatable="false">Visit Follow-Up</string>
    <string name="more_leave_application" translatable="false">Leave &#10; Application</string>
    <string name="more_leave_approval" translatable="false">Leave</string>
    <string name="approval" translatable="false">Approval</string>
    <string name="more_tour_plan" translatable="false">Tour &#10; Plan</string>
    <string name="more_order_entry" translatable="false">Order Entry</string>
    <string name="more_inquiry_entry" translatable="false">Inquiry</string>
    <string name="more_quotation_entry" translatable="false">Quotation</string>
    <string name="more_payment_follow_up" translatable="false">Payment FollowUp</string>
    <string name="more_sales_inquiry" translatable="false">Sales Inquiry</string>
    <string name="add_expense" translatable="false">Add Expense</string>
    <string name="update_expense" translatable="false">Update Expense</string>
    <string name="add_expense_dialog_title" translatable="false">Add Expense</string>
    <string name="report_group_by" translatable="false">Report Group By</string>
    <string name="leave_application" translatable="false">Leave Application</string>
    <string name="leave_application_update_msg" translatable="false">Leave Application Update Successfully</string>
    <string name="leave_application_add_msg" translatable="false">Leave Application Added Successfully</string>
    <string name="add_leave_application" translatable="false">Add Leave Application</string>
    <string name="search_here" translatable="false">Search Here...</string>
    <string name="start_trip" translatable="false">Start Trip</string>
    <string name="end_trip" translatable="false">End Trip</string>
    <string name="start_meter_validation_msg" translatable="false">Please enter start meter reading</string>
    <string name="start_meter_reading_upload_validation_msg" translatable="false">Please upload start meter reading photo</string>
    <string name="location_error_title" translatable="false">Location Error</string>
    <string name="location_ads_error_msg" translatable="false">Address not found, Please enable or check your location</string>
    <string name="upload_photo" translatable="false">Upload Photo</string>
    <string name="accept" translatable="false">Accept</string>
    <string name="reject" translatable="false">Reject</string>
    <string name="remarks_label" translatable="false">Enter Remarks..</string>
    <string name="mobile_number" translatable="false">Mobile Number</string>
    <string name="your_feedback" translatable="false">Your Feedback</string>
    <string name="approval_remarks" translatable="false">Approval Remarks</string>
    <string name="expected_date" translatable="false">Expe. Date</string>
    <string name="amount" translatable="false">Amount</string>
    <string name="select_company" translatable="false">Select Company</string>
    <string name="if_you_required_n_support_click_on_call_button" translatable="false">If you required \n support click on call button</string>
    <string name="full_name" translatable="false">Full Name</string>
    <string name="expense_remarks" translatable="false">Expense Remark</string>
    <string name="call_now" translatable="false">Call Now</string>
    <string name="approval_amount" translatable="false">Approval Amount</string>
</resources>