<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_attendance"
        android:icon="@drawable/ic_attendance_selector"
        android:title="@string/attendance" />

    <item
        android:id="@+id/nav_trip"
        android:icon="@drawable/ic_trip"
        android:title="@string/trip" />
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_selector"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_reports"
        android:icon="@drawable/ic_reports"
        android:title="@string/reports" />

    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/ic_more"
        android:title="@string/more_options" />

</menu>