<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorscreenbackground">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_header" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/llAcceptReject"
            android:layout_below="@id/toolbar"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    style="@style/TextViewLabelNormal"
                    android:text="@string/date" />

                <TextView
                    android:id="@+id/tvDate"
                    style="@style/CommonEditTextViewStyle"
                    android:drawablePadding="@dimen/_5sdp"
                    app:drawableRightCompat="@drawable/ic_calendar" />

                <TextView
                    style="@style/TextViewLabelNormal"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:text="@string/place" />

                <LinearLayout
                    android:id="@+id/llSelectPlace"
                    android:layout_marginTop="@dimen/_4sdp"
                    style="@style/LinearLayoutHorizontal"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/edittext_background"
                    android:gravity="start|center">

                    <TextView
                        android:id="@+id/tvSelectPlace"
                        style="@style/TextViewLabelNormal"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="start|center"
                        android:hint="@string/select_place"
                        android:paddingStart="@dimen/_3sdp"
                        android:paddingEnd="@dimen/_3sdp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black" />

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="match_parent"
                        android:padding="@dimen/_5sdp"
                        android:src="@drawable/ic_drop_down" />

                </LinearLayout>

                <TextView
                    style="@style/TextViewLabelNormal"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:text="@string/expense_type" />


                <TextView
                    android:id="@+id/tvExpenseType"
                    style="@style/BoxTextView"
                    android:visibility="gone" />

                <FrameLayout
                    android:id="@+id/flExpnseType"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp">

                    <Spinner
                        android:id="@+id/spExpenseType"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/edittext_background"
                        android:gravity="start"
                        android:singleLine="true"
                        android:textColor="@color/black" />

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="match_parent"
                        android:layout_gravity="end|center"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:src="@drawable/ic_drop_down" />
                </FrameLayout>


                <TextView
                    style="@style/TextViewLabelNormal"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:text="@string/control_mode" />

                <TextView
                    android:id="@+id/tvSelectControlMode"
                    style="@style/CommonEditTextViewStyle"
                    android:text="@string/select_control"
                    android:textColor="@color/black" />


                <TextView
                    style="@style/TextViewLabelNormal"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:text="@string/vehical_type" />

                <TextView
                    android:id="@+id/tvSelectVehicalType"
                    style="@style/CommonEditTextViewStyle"
                    android:text="@string/select_vehical"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvEligibleAmountLabel"
                    style="@style/TextViewLabelNormal"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:text="@string/eligible_amount" />

                <TextView
                    android:id="@+id/tvEligibleAmount"
                    style="@style/CommonEditTextViewStyle"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvExpenseAmountLabel"
                    style="@style/TextViewLabelNormal"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:text="@string/expense_amount" />

                <EditText
                    android:id="@+id/etExpenseAmount"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionDone"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:textSize="@dimen/_12ssp"
                    android:paddingStart="@dimen/_7sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:gravity="start|center"
                    android:fontFamily="@font/nunito_sans_regular"
                    android:background="@drawable/edittext_background"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"/>

                <LinearLayout
                    android:id="@+id/llApprovalAmount"
                    android:orientation="vertical"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextViewLabelNormal"
                        android:layout_marginTop="@dimen/_7sdp"
                        android:text="@string/approval_amount" />

                    <EditText
                        android:id="@+id/etApprovalAmount"
                        style="@style/CommonEditTextViewStyle"
                        android:inputType="number"
                        android:textColor="@color/black" />
                </LinearLayout>


                <TextView
                    style="@style/TextViewLabelNormal"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:text="@string/expense_remarks" />

                <EditText
                    android:id="@+id/etRemarks"
                    style="@style/CommonMultiLineEditTextStyle"
                    android:paddingStart="@dimen/_7sdp"
                    android:inputType="text"
                    android:textColor="@color/black" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardImage"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="@dimen/_3sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/dashed_background_primary"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imgExpense"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_80sdp"
                            android:padding="@dimen/_3sdp"
                            android:src="@drawable/ic_upload" />

                        <TextView
                            android:id="@+id/tvRecapturePAN"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/upload_photo"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:id="@+id/llApprovalRemarks"
                    style="@style/LinearLayoutVertical"
                    android:visibility="gone">

                    <TextView
                        style="@style/TextViewLabelNormal"
                        android:text="@string/approval_remarks" />

                    <EditText
                        android:id="@+id/etExpenseApprovalRemarks"
                        android:inputType="text"
                        android:paddingStart="@dimen/_7sdp"
                        style="@style/CommonMultiLineEditTextStyle" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvAddExpense"
                    style="@style/CommonButtonStyle"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/submit"
                    android:textColor="@color/white" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/llAcceptReject"
            style="@style/LinearLayoutHorizontal"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentBottom="true"
            android:visibility="gone">

            <TextView
                android:id="@+id/tvAccept"
                style="@style/CommonButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_5sdp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorGreen"
                android:text="@string/accept" />

            <TextView
                android:id="@+id/tvReject"
                style="@style/CommonButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_5sdp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorRed"
                android:text="@string/reject" />
        </LinearLayout>
    </RelativeLayout>
</layout>